# quickdrawneta

./: .gitignore  README.md  categories.txt  class_names.txt  image_processor_QD.py  main.py  model.keras  modelosotillo.h5  pyproject.toml  traducir_category.py
model/: categories.txt  modelSalcedinho.py  modelSalcedinhoRepotenciadov10.py  modelSalcedinhoRepotenciadov2.py  modelSalcedinhoRepotenciadov7.py  modelSalcedinhoRepotenciadov8 ROSAS_MODEL.py  modelSalcedinhoRepotenciadov8.py  model_QD.py  quickdrawSalcedinho.h5  quickdrawSalcedinho2.h5  quickdrawSalcedinhoREPOTENCIAO_19.h5  salcedoOriginsModelBarreto.txt
quickdrawneta/: class_names.txt  labels.txt  model.keras  model.py  modelSalcedinhoRepotenciadov10.py  modelSalcedinhoRepotenciadov8_SUCRE_1.py
